Div red endringer #29 og #8

--- a/docs/22-infosikkerhet.adoc
+++ b/docs/22-infosikkerhet.adoc
@@ -12,7 +12,7 @@ Uten orden i eget hus og en oversikt over informasjonen man forvalter, kan man i
 
 Mange arbeider med å få oversikt over sine personopplysninger i forbindelse med innføringen av personvernforordningen (General Data Protection Regulation). Vi mener at ved å kombinere dette arbeidet med god informasjonsforvaltning generelt, vil man kunne skape et godt grunnlag for det videre arbeidet på ulike områder – og utnytte ressursene sine bedre.
 
-Difi har utviklet veilederen http://internkontroll-infosikkerhet.difi.no/[“Internkontroll i praksis - informasjonssikkerhet”]. For å ha tilstrekkelig styring og kontroll på informasjonssikkerhetsområdet, må virksomheten ha oversikt over hvilke arbeidsoppgaver som utføres, og hvilke informasjonstyper som behandles i de ulike oppgavene. Vi mener det er mulig å kombinere foranalysen av ansvarsområder med flagging av data for videre arbeid med datadeling. Digitaliseringsdirektoratets veiledningsmateriell har hjelpemidler som kan brukes i arbeidet:
+Digitaliseringsdirektoratet har utviklet veilederen http://internkontroll-infosikkerhet.difi.no/[“Internkontroll i praksis - informasjonssikkerhet”]. For å ha tilstrekkelig styring og kontroll på informasjonssikkerhetsområdet, må virksomheten ha oversikt over hvilke arbeidsoppgaver som utføres, og hvilke informasjonstyper som behandles i de ulike oppgavene. Vi mener det er mulig å kombinere foranalysen av ansvarsområder med flagging av data for videre arbeid med datadeling. Digitaliseringsdirektoratets veiledningsmateriell har hjelpemidler som kan brukes i arbeidet:
 
 *   	https://internkontroll-infosikkerhet.difi.no/systematiske-aktiviteter/risikovurdering#Fa_oversikt_prioritere[Beskrivelse av aktiviteten «Få oversikt og prioritere»], som omfatter blant annet foranalysen +
 *     https://internkontroll-infosikkerhet.difi.no/sites/sikkerhet/files/mal_foranalyse_del_1-risikoeiere-arbeidsoppgaver_informasjon_mv-fa_oversikt_og_prioritere_0.docx[Mal til skjema for gjennomføring av foranalysen på et ansvarsområde]
