--- a/docs/6-kartlegging.adoc
+++ b/docs/6-kartlegging.adoc
@@ -3,7 +3,7 @@
 
 ==== Hva er et datasett og hvilke datasett skal beskrives?
 
-Et datasett er en organisert samling av data. Hvordan et datasett avgrenses og organiseres vil imidlertid variere mellom ulike virksomheter. Det kan gjøres ulike valg f.eks. mht. hvilke datasett som skal spesifiseres i forbindelse med en saksbehandling eller trekkes ut av en database eller et register (se https://www.difi.no/artikkel/2016/06/erfaringer-med-bestemme-hva-et-datasett-er-og-hvilke-datasett-som-skal-beskrives[Brønnøysundregistrenes tanker rundt dette]).
+Et datasett er en organisert samling av data. Hvordan et datasett avgrenses og organiseres vil imidlertid variere mellom ulike virksomheter. Det kan gjøres ulike valg f.eks. mht. hvilke datasett som skal spesifiseres i forbindelse med en saksbehandling eller trekkes ut av en database eller et register (https://www.digdir.no/digitale-felleslosninger/hvordan-bestemme-hva-et-datasett-er-og-hvilke-datasett-som-skal-beskrives/2198[Brønnøysundregistrenes tanker rundt dette]).
 
 Det er i utgangspunktet opp til virksomheten, ut fra gitte formål, å definere hvilke datasett som er relevant å beskrive, og mange vil ha lovverk og retningslinjer som sier noe om dette. Imidlertid fokuserer veilederen på datadeling, dermed kan en grovt sett si at alle datasett som virksomheten kan dele med andre, er relevant å beskrive.
 
@@ -12,7 +12,7 @@ Det er i utgangspunktet opp til virksomheten, ut fra gitte formål, å definere 
 Det første du må gjøre er å skaffe deg oversikt over hvilke datasett som finnes i virksomheten, og hvem som har ansvaret for disse. Vi anbefaler å utnevne en person som kan opptre som koordinator for dette arbeidet. +
 Begynn gjerne med arkivmedarbeidere, seksjonssjefer, avdelingsdirektører eller andre saksansvarlige, men husk at kjennskap til (og kunnskap om) datasett og registre gjerne finnes på alle nivå i virksomheten.
 
-Det kan være vanskelig å vurdere hva som er samling av data og dermed hvor stor eller liten samlingen skal være. Kriterier for å avgrense et datasett vil kunne variere mellom virksomheter og over tid. Se https://www.difi.no/artikkel/2016/06/erfaringer-med-bestemme-hva-et-datasett-er-og-hvilke-datasett-som-skal-beskrives[Brønnøysundregistrenes tanker rundt dette].
+Det kan være vanskelig å vurdere hva som er samling av data og dermed hvor stor eller liten samlingen skal være. Kriterier for å avgrense et datasett vil kunne variere mellom virksomheter og over tid. Se https://www.digdir.no/digitale-felleslosninger/hvordan-bestemme-hva-et-datasett-er-og-hvilke-datasett-som-skal-beskrives/2198[Brønnøysundregistrenes tanker rundt dette].
 
 For noen vil det sannsynligvis være hensiktsmessig å ta for seg ulike arbeidsprosesser (f.eks. knyttet til forskjellige typer saksbehandling), og identifisere og beskrive datasett for én og én prosess. Andre måter å avgrense på kan være ut fra hjemmelsgrunnlag, overordnet, tematisk/faglig område, eller også data knyttet til tjenester. Ved utvikling av nye løsninger kartlegges gjerne informasjonsarkitekturen as-is og to-be i ny løsning. Dette er et godt utgangspunkt for å kartlegge datasett og gjøre data fra tjenesten maskinlesbart tilgjengelig. Dersom en har datasett som både brukes internt (av andre deler av virksomheten enn de som forvalter datasettene), og eksternt, bør en prioritere å starte med disse som vil gi gevinst for både egen og andre virksomheter.
 
@@ -31,7 +31,7 @@ Eksempler på avgrensing av et datasett:
 
 Det kan oppstå behov for å definere begrep i kartleggingsfasen og i et utviklingsprosjekt, og vi anbefaler at disse forvaltes i en felles begrepskatalog for virksomheten med tydelige forvaltningsprosesser definert (mer om dette i kapittelet om Styring og forvaltning). Begrepene bør være definert i henhold til angitt https://www.digdir.no/digitalisering-og-samordning/omgrepsanalyse-og-definisjonsarbeid/1483[standard]. Målet på sikt er at etatenes begreper har en https://www.digdir.no/digitale-felleslosninger/pekere-til-offentlige-ressurser-pa-nett/1492[unik identifikator] som gjør at begrepet er en felles ressurs som kan pekes til og gjenbrukes på tvers av offentlig forvaltning. F.eks. fra både virksomhetsintern og felles datakatalog og i definerte informasjonsmodeller.
 
-Tar en for seg å beskrive ulike arbeidsprosesser anbefaler https://www.digdir.no/nasjonal-arkitektur/rammeverk-digital-samhandling/2148[Digitaliseringsdirektoratet] at man benytter Archimate og BPMN som felles modelleringsspråk (notasjon). Archimate (ArchiMate - architecture modeling language)  er en de-facto standard for beskrivelse av arkitektur og representerer en visuell måte å beskrive arkitekturobjekter med relasjoner i form av modeller. Språket og modellene kan brukes for å kommunisere, designe og vurdere arkitektur.  BPMN (Business Process and Modelling Notation) brukes for prosessbeskrivelser.
+Tar en for seg å beskrive ulike arbeidsprosesser anbefaler https://www.digdir.no/nasjonal-arkitektur/rammeverk-digital-samhandling/2148[Digitaliseringsdirektoratet at man benytter Archimate og BPMN] som felles modelleringsspråk (notasjon). Archimate (ArchiMate - architecture modeling language)  er en de-facto standard for beskrivelse av arkitektur og representerer en visuell måte å beskrive arkitekturobjekter med relasjoner i form av modeller. Språket og modellene kan brukes for å kommunisere, designe og vurdere arkitektur.  BPMN (Business Process and Modelling Notation) brukes for prosessbeskrivelser.
 
 ==== Hva er forskjellen mellom oversikt og beskrivelse?
 
