--- a/21-innovasjon.adoc
+++ b/21-innovasjon.adoc
@@ -3,7 +3,7 @@
 
 Innovasjon er en samlebetegnelse for vellykket fornyelse. Når økonomier endrer seg raskt er innovasjon nødvendig for å opprettholde og utvikle vår konkurranseevne og vår velstand.
 
-Data ligger til grunn for hvordan vi løser oppgaver nå og fremover. Det har innvirkning på hvordan offentlige oppgaver organiseres og utformes. For å få til den nødvendige endringen må offentlig sektor ha kontroll på egne data som grunnlag for redesign av virksomheten på alle nivå - folk, prosesser, teknologi og styring.footnote:[Mer om digital transformasjon på Difs sider: https://www.difi.no/fagomrader-og-tjenester/digitalt-forstevalg/hva-er-digitalt-forstevalg/digital-transformasjon]
+Data ligger til grunn for hvordan vi løser oppgaver nå og fremover. Det har innvirkning på hvordan offentlige oppgaver organiseres og utformes. For å få til den nødvendige endringen må offentlig sektor ha kontroll på egne data som grunnlag for redesign av virksomheten på alle nivå - folk, prosesser, teknologi og styring.footnote:[Mer om digital transformasjon på Digdirs sider: https://www.digdir.no/digitalisering-og-samordning/digital-transformasjon/1589]
 
 Innlåsning til en leverandør kan hemme innovasjon, og gi dårligere kostnadseffektivitet enn virksomheten kan oppnå ved hyppigere konkurranseutsetting. https://www.fintlabs.no/#/[FINT-prosjektet] (Felles Fylkeskommunale INTegrasjone) leverer en informasjonsmodell og et API for kommunikasjon som kan legges som grunnlag for fremtidige kjøp av nye systemer (krav), forbedring av eksisterende tjenester og utvikling av nye tjenester. Ting gjøres en gang og likt hos alle fylkeskommuner og en unngår innlåsing.
 
