Inkl begrep, api, infomodell

--- a/docs/10-tilgjengeliggjøre.adoc
+++ b/docs/10-tilgjengeliggjøre.adoc
@@ -4,7 +4,7 @@
 ==== Datakatalog - en oversikt over datasett
 En datakatalog er en sammenstilling av strukturerte beskrivelser av datasett. Felles datakatalog inneholder også beskrivelser av begreper, APIer og informasjonsmodeller. En datakatalog inneholder gjerne pekere til hvor datasettene finnes (lenke til distribusjoner), men inneholder altså ikke selve datasettene.  I Norge er https://data.norge.no/specification/dcat-ap-no/[Standard for beskrivelse av datasett, datatjenester og datakataloger] (DCAT-AP-NO) anbefalt for alle offentlige virksomheter. Eksempler på opplysninger i en datasettbeskrivelse er tittel, beskrivelse, utgiver,  kontaktpunkt, gyldighetsperiode og dekningsområde. En gjennomgang av alle de obligatoriske, anbefalte og valgfrie feltene og hvordan disse skal fylles ut finnes i https://data.norge.no/guide/veileder-beskrivelse-av-datasett/[veilederen for beskrivelse av datasett].
 
-https://data.norge.no/[Felles datakatalog] er en nasjonal katalog over datasett, og det enkelte datasett er beskrevet i henhold til nevnte standard. Datasett kan enten beskrives og registreres direkte i Felles datakatalog, eller virksomheten kan etablere en virksomhetsintern datakatalog som Felles datakatalog høster fra.
+https://data.norge.no/[Felles datakatalog] er en nasjonal katalog over datasett, begrep, APIer og informasjonsmodeller. Det enkelte datasett er beskrevet i henhold til nevnte standard. Datasett kan enten beskrives og registreres direkte i Felles datakatalog, eller virksomheten kan etablere en virksomhetsintern datakatalog som Felles datakatalog høster fra.
 
 En virksomhetsintern datakatalog kan være nyttig for å få en tettere kobling mellom beskrivelsene og selve datasettene. Enkeltopplysninger kan da hentes maskinelt fra kilden, som for eksempel når datasettet sist ble oppdatert (endringsdato).
 
