--- a/14-rollerProsesserBegrepsarbeid.adoc
+++ b/14-rollerProsesserBegrepsarbeid.adoc
@@ -5,9 +5,11 @@ En vanlig utfordring er at begrepsarbeid ofte starter i forbindelse med større 
 
 Begrepenes livssyklus bør defineres gjennom en prosess, se eksempel under. Prosessen bør også ta høyde for endringer og revisjoner (nye versjoner etter godkjenning)footnote:[I dette eksempelet er ikke revisjonsprosess tatt med.].
 
-image::Prosess_begrep_Brreg.jpg[]
-_Figur 2__:Prosess i begrepsarbeid
+image::Hovedprosess Brreg ny.png[]
+Eksempel på prosess i begrepsarbeid
 
+image::delprosess Godkjenne begrep_brreg ny.png
+Eksempel på delprosess for godkjenning av begrep
 
 ==== Roller i begrepsarbeidet
 
