--- a/docs/5-modenhetsmåling.adoc
+++ b/docs/5-modenhetsmåling.adoc
@@ -3,7 +3,7 @@
 
 image::OiEH_sirkel.png[]
 
-Nødvendige steg for å skape Orden i eget hus
+Illustrasjon av nødvendige steg for å skape Orden i eget hus
 
 === Modenhetsmåling
 
