--- a/docs/shared/download.adoc
+++ b/docs/shared/download.adoc
@@ -2,6 +2,6 @@ ifeval::["{backend}" == "html5"]
 
 [TIP]
 //.Nedlasting av dokumentet
-Dette dokumentet kan også lastes ned link:document.pdf[som PDF].
+Dette dokumentet kan også lastes ned link:veileder-orden-i-eget-hus.pdf[som PDF].
 
 endif::[]
